<!--
  ~ Copyright (C) 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Currency Converter</string>

    <!-- Table Resources -->
    <string name="buy_price_column">Buy Price</string>
    <string name="sell_price_column">Sell Price</string>

    <!-- Currencies -->
    <string name="USD">USD</string>
    <string name="RUB">RUB</string>
    <string name="EUR">EUR</string>

    <string-array name="currencies_array">
        <item>UAH</item>
        <item>USD</item>
        <item>RUB</item>
        <item>EUR</item>
    </string-array>

    <string name="sample_value">26.30</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="value_1">Count</string>
    <string name="value_2">Count</string>
    <string name="refresh">Refresh</string>
    <string name="display_branches">Display Branches</string>
    <string name="empty" />
    <string name="calculate">Calculate</string>

</resources>
